# QA-assiments

./: README.md  pyproject.toml
assigments/: task2_1.py  task2_2.py  task2_3.py  task3.py  task4.py  task5.py
